Fix bug : Homepage scroll broken on mobile --> https://trello.com/c/2MPDIWYQ/167-documentation-website-home-page-is-broken-on-mobile

--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -125,4 +125,33 @@
       }
     }
   }
+
+
+  @media screen and (max-width: 600px) {
+    .home-wrapper {
+      height: auto;
+      .home-sec-1 {
+        .text-item {
+          width: 100%;
+          max-width: 100%;
+          padding-top: 0px;
+        }
+        .svg-item {
+          display:none;
+        }
+      }
+      .home-sec-2 {
+        flex-direction: column;
+        div {
+          .docs-feature-thumb {
+            margin: 0 auto;
+          }
+          h3,p {
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+
 }
